feat: add recipes page with filtering options and recipe grid

--- a/web/src/layouts/BaseLayout.astro
+++ b/web/src/layouts/BaseLayout.astro
@@ -74,6 +74,7 @@ const docLinks = entries
             <summary>Library</summary>
             <div class="nav-dropdown__panel" role="menu">
               <a role="menuitem" href="/ingredients">Ingredients</a>
+              <a role="menuitem" href="/recipes">Recipes</a>
               <a role="menuitem" href="/recipe">Recipe builder</a>
               <a role="menuitem" href="/specs">All specs</a>
               <a role="menuitem" href="/admin">Admin</a>
